force-app/main/default/objects/maps__TerritoryAggregation__c/maps__TerritoryAggregation__c.object-meta.xml
<CustomObject>
    <label>Territory Aggregation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Aggregations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>