force-app/main/default/objects/maps__TerritoryAggregation__c/fields/maps__IsActive__c.field-meta.xml
<CustomField>
    <fullName>maps__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>