force-app/main/default/objects/maps__TerritoryAggregation__c/fields/maps__MAIOAggregatorKey__c.field-meta.xml
<CustomField>
    <fullName>maps__MAIOAggregatorKey__c</fullName>
    <label>MAIO Aggregator Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>