force-app/main/default/objects/maps__TerritoryAggregation__c/fields/maps__Max__c.field-meta.xml
<CustomField>
    <fullName>maps__Max__c</fullName>
    <label>Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>