force-app/main/default/objects/maps__TerritoryAggregation__c/fields/maps__Min__c.field-meta.xml
<CustomField>
    <fullName>maps__Min__c</fullName>
    <label>Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>