force-app/main/default/objects/maps__TerritoryAggregation__c/fields/maps__Reason__c.field-meta.xml
<CustomField>
    <fullName>maps__Reason__c</fullName>
    <label>Deactivation Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>