force-app/main/default/objects/maps__TerritoryAggregation__c/fields/maps__TerritoryAggregationSetting__c.field-meta.xml
<CustomField>
    <fullName>maps__TerritoryAggregationSetting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maps Territory Aggregation Setting</label>
    <referenceTo>maps__TerritoryAggregationSetting__c</referenceTo>
    <relationshipLabel>Maps Territory Aggregations</relationshipLabel>
    <relationshipName>TerritoryAggregations</relationshipName>
    <type>Lookup</type>
</CustomField>